fix: prevent iine button shifting when numbers change

--- a/src/css/blocks/_meta.scss
+++ b/src/css/blocks/_meta.scss
@@ -85,7 +85,3 @@
 	--flow-space: var(--size-small);
 	line-height: var(--line-height-medium);
 }
-
-:is(div, li):has(> .iine-button:empty) {
-	display: none;
-}
